--- a/src/scss/atomic/molecules/_tabs.scss
+++ b/src/scss/atomic/molecules/_tabs.scss
@@ -1,6 +1,11 @@
 .tabs {
-    margin-top: -($buildingUnit / 2);
-    margin-bottom: ($buildingUnit * 5 -($buildingUnit / 2));
+    margin-top: -($buildingUnit * 3);
+    margin-bottom: $buildingUnit * 3;
+
+    @include min-tablet() {
+        margin-bottom: $buildingUnit * 4.5;
+        margin-top: -($buildingUnit * 3.1);
+    }
 
     &__nav {
         position: relative;
@@ -40,7 +45,6 @@
     &__list_item {
         flex: 0 1 auto;
         text-align: center;
-
     }
 
     &__list_link {
@@ -54,10 +58,7 @@
 
         @include font-line-ratio(prim-s);
 
-        padding-left: $buildingUnit;
-        padding-right: $buildingUnit;
-        padding-top: $buildingUnit;
-        padding-bottom: ($buildingUnit);
+        padding: ($buildingUnit - 2.5px) $buildingUnit;
 
         white-space: nowrap;
 
@@ -70,26 +71,21 @@
             }
         }
 
-        &:not():focus:not(:active),
-        &:not():focus:not(:hover){
-            background-color: transparent;
-            color: $colorBlack;
-        }
-
         > span {
             margin-right: $buildingUnit / 2;
         }
-
     }
 
     &__indicator {
         position: absolute;
         z-index: 1;
         display: block;
-        left: 0; right: 0;
+        left: 0;
+        right: 0;
         bottom: 0;
 
-        height: 2px; width: 100%;
+        height: 2px;
+        width: 100%;
         background-color: $colorBlack;
     }
 
