--- a/src/scss/atomic/organisms/_content-cover.scss
+++ b/src/scss/atomic/organisms/_content-cover.scss
@@ -27,7 +27,7 @@
 
 
 .content-cover-content {
-    margin-top: $buildingUnit * 2.5;
+    margin-top: $buildingUnit * 2;
 
     @include min-tablet {
         margin-top: 0;
